--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-error-boundary": "^1.2.3",
     "react-native-fast-video": "5.1.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-webview": "^12.0.2"
